# kaggle-geolife-clef

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  development.ipynb  pyproject.toml  requirements-all.txt  requirements.in  requirements.txt
.github/workflows/: docker-build.yaml  qc-and-test.yaml
geolife_clef_2024/: __init__.py  constants.py  data.py  dataset_utils.py  datasets.py  img_utils.py  locations.py  metadata_schemas.py  predictions.py  satellite_patches.py  species_ids.py  submissions.py  type_aliases.py
geolife_clef_2024/models/: common.py  metrics.py  utils.py
geolife_clef_2024/models.py/: __init__.py  unimodal.py
geolife_clef_2024/models/multimodal/: __init__.py  baseline_sentinel_landsat_bioclim.py  satellite_patches_and_time_cubes.py
geolife_clef_2024/models/unimodal/: bioclimatic_models.py  landsat_models.py  observation_data_models.py  satellite_image_models.py
notebooks/: 0-kaggle-run.ipynb  1-Check-data.ipynb  1-Check-metadata.ipynb
scripts/: download_dataset.sh  kaggle-init.sh
tests/: test_dataset_loaders.py  test_datasets_for_multimodal.py
